fix: aspect ratio of book covers on ios
- no idea why I can't reproduce this on Android.
- the display flex on the list item presumably makes the image expand to the full width

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -185,7 +185,6 @@ li.webmention.mention q {
 
 .bookshelf li {
   list-style: none;
-  display: flex;
 }
 
 .game-container {
